/************************************************************************************/
/*	Changelog for Simply Pure WordPress Theme	*/		
/************************************************************************************/		
/**
 * To be Announced - version 1.1.2
 */
1. Correct some things for localization (by Sebseb01)
2. Propose a .pot file (by Sebseb01)
3. Add first version of a fr_FR.po (by Sebseb01)
4. Update to purecss 0.6 (grids.css is needed by a bug) (by Sebseb01)
5. Small bugfixes
6. Changed Text domain from 'purecss' to 'simply-pure'


/*
 *	24/06/2015 - version 1.1.1	
 */
1. Fixed author avatar beside Post title
2. Removed commented Code

/**
 * 28/01/15 - version 1.1
 */

1. Changed footer text and link in footer.php ( also escaped url using 'esc_uri()' )
2. Added Avatars beside Post title (also toggle option in WP Customizer)
3. Changed Text domain from 'purecss_theme' to 'purecss'
4. Enqueued script.js instead of using it inline
5. Fixed default values not getting set on first install
6. Changed Screenshot

/**
 * 2/11/2014 - version 1.0
 */

1. Initial Release